# WeCycleApp

./: Podfile
WeCycle/: Account.swift  AppDelegate.swift  CameraViewController.swift  CircleView.swift  CircularTransition.swift  ClarifaiHelper.swift  FriendsTableViewCell.swift  GoogleService-Info(1).plist  GoogleService-Info.plist  Info.plist  LaunchScreen.storyboard  Main.storyboard  MainCollectionViewCell.swift  NewsCollectionViewCell.swift  PreviewViewController.swift  ViewController.swift  WeCycle-Bridging-Header.h  bridge.c  bridge.h  bridgeHeaD.cpp  bridgeHeaD.hpp  google-services.json
WeCycle.xcodeproj/: project.pbxproj
WeCycle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
WeCycle.xcworkspace/: contents.xcworkspacedata
WeCycle.xcworkspace/xcuserdata/abhishek.xcuserdatad/: UserInterfaceState.xcuserstate
WeCycle.xcworkspace/xcuserdata/sahil.xcuserdatad/: UserInterfaceState.xcuserstate
WeCycle/Backend Files /: Account.cpp  Account.h  AccountValueListener.cpp  AccountValueListener.h  AccountWrapper.cpp  AccountWrapper.hpp  Authentication.cpp  Authentication.h  AuthenticationWrapper.cpp  AuthenticationWrapper.hpp  CMakeLists.txt  Crypto.cpp  Crypto.h  DataManager.cpp  DataManager.h  DataManagerWrapper.cpp  FirebaseManager.cpp  FirebaseManager.h  FirebaseManagerWrapper.cpp  PlayerAchievements.cpp  PlayerAchievements.h  PlayerAchievementsWrapper.cpp  PlayerAchievementsWrapper.hpp  PushableObject.cpp  PushableObject.h  PushableObjectWrapper.cpp  Rank.cpp  StorageListener.cpp  StorageListener.h  StorageManager.cpp  StorageManager.h  StorageManagerWrapper.cpp  WeCycle.cpp  WeCycle.h
WeCycle/View Controllers/: CameraViewController.swift  FinderViewController.swift  LeftScreenViewController.swift  NewsViewController.swift  PreviewViewController.swift  RightScreenViewController.swift  ScrollViewController.swift  SettingsViewController.swift  StatsViewController.swift  ViewController.swift  WeCycle-Bridging-Header.h
WeCycle/View Controllers/Backend Stuff/: Account.cpp  Account.h  AccountWrapper.cpp  AccountWrapper.hpp  CMakeLists.txt  DataManager.cpp  DataManager.h  DataManagerWrapper.hpp  FirebaseManager.cpp  FirebaseManager.h  FirebaseManagerWrapper.hpp  PushableObject.h  PushableObjectWrapper.cpp  PushableObjectWrapper.hpp  Rank.h  StorageListener.h  StorageManager.h  StorageManagerWrapper.cpp  StorageManagerWrapper.hpp  WeCycle.cpp  main.c
(+26 files in other folders)
